// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basket snapshot test 1`] = `
<div>
  <h1
    className="title"
  >
     Basket 
  </h1>
  <ol
    className="basket"
  />
  <h1>
    Total: $
  </h1>
</div>
`;

exports[`Basket with tickets snapshot test 1`] = `
<div>
  <h1
    className="title"
  >
     Basket 
  </h1>
  <ol
    className="basket"
  >
    <li>
      <div
        className="basket-item"
      >
        <p
          className="basket-item-event-name"
        >
          porro dolores magni
        </p>
        <p
          className="basket-item-type"
        >
          PAID
        </p>
        <p
          className="basket-item-price"
        >
          $ 
          10
        </p>
        <button
          className="basket-item-remove"
          data-testid="remove-button"
          onClick={[Function]}
        >
          Remove
        </button>
      </div>
    </li>
  </ol>
  <h1>
    Total: $
    10
  </h1>
</div>
`;
